src/test/fz/errors/road-cons/dznFolder/road_18.dzn
n=18;
budget=2292;
distance=[|0,286,248,255,135,179,170,218,163,93,97,177,11,75,299,238,206,1|286,0,264,190,76,116,278,178,121,101,53,177,37,159,105,1,287,299|248,264,0,9,66,260,116,223,193,202,189,42,286,180,260,118,75,54|255,190,9,0,2,237,175,295,295,109,4,68,252,58,78,251,209,291|135,76,66,2,0,217,22,135,129,51,196,165,217,89,112,264,80,293|179,116,260,237,217,0,195,24,202,158,108,150,58,84,292,189,278,143|170,278,116,175,22,195,0,97,71,96,241,36,299,29,103,92,139,6|218,178,223,295,135,24,97,0,182,210,97,184,203,233,219,95,37,269|163,121,193,295,129,202,71,182,0,84,275,255,70,41,251,32,167,251|93,101,202,109,51,158,96,210,84,0,47,240,25,142,179,98,159,277|97,53,189,4,196,108,241,97,275,47,0,140,210,249,262,300,166,267|177,177,42,68,165,150,36,184,255,240,140,0,52,99,187,104,21,254|11,37,286,252,217,58,299,203,70,25,210,52,0,6,93,7,169,109|75,159,180,58,89,84,29,233,41,142,249,99,6,0,186,37,42,65|299,105,260,78,112,292,103,219,251,179,262,187,93,186,0,237,77,64|238,1,118,251,264,189,92,95,32,98,300,104,7,37,237,0,195,96|206,287,75,209,80,278,139,37,167,159,166,21,169,42,77,195,0,268|1,299,54,291,293,143,6,269,251,277,267,254,109,65,64,96,268,0|];
cost=[|0,19,64,35,37,49,34,34,45,43,20,63,60,10,64,3,35,67|19,0,46,21,15,21,48,53,69,48,64,16,36,70,5,62,24,7|64,46,0,65,29,17,39,18,32,8,3,49,70,66,31,47,41,6|35,21,65,0,32,41,13,56,25,44,58,61,54,17,6,70,34,27|37,15,29,32,0,27,10,30,32,16,57,32,47,9,43,61,46,44|49,21,17,41,27,0,3,68,56,65,48,17,40,57,37,56,39,26|34,48,39,13,10,3,0,41,10,19,51,17,18,20,10,51,4,13|34,53,18,56,30,68,41,0,26,37,68,9,18,38,56,2,50,49|45,69,32,25,32,56,10,26,0,44,61,40,63,19,37,39,6,1|43,48,8,44,16,65,19,37,44,0,40,29,47,40,10,19,3,68|20,64,3,58,57,48,51,68,61,40,0,32,59,55,33,36,65,51|63,16,49,61,32,17,17,9,40,29,32,0,6,8,60,63,12,21|60,36,70,54,47,40,18,18,63,47,59,6,0,14,50,4,22,24|10,70,66,17,9,57,20,38,19,40,55,8,14,0,40,9,59,69|64,5,31,6,43,37,10,56,37,10,33,60,50,40,0,2,30,2|3,62,47,70,61,56,51,2,39,19,36,63,4,9,2,0,51,25|35,24,41,34,46,39,4,50,6,3,65,12,22,59,30,51,0,26|67,7,6,27,44,26,13,49,1,68,51,21,24,69,2,25,26,0|];
